[gd_scene load_steps=7 format=3 uid="uid://kuxkg3x1113q"]

[ext_resource type="Script" path="res://Pit.gd" id="1_facbr"]
[ext_resource type="Texture2D" uid="uid://cefnxitl4i0dx" path="res://tyres/tyre-blue.png" id="1_ysf8g"]
[ext_resource type="Texture2D" uid="uid://burs16s1g46rp" path="res://tyres/tyre-purple.png" id="2_5alox"]
[ext_resource type="Texture2D" uid="uid://7jmqjo7mkuso" path="res://tyres/tyre-red.png" id="3_r5dis"]
[ext_resource type="Texture2D" uid="uid://bpbgnwyqn7ryr" path="res://tyres/tyre-yellow.png" id="4_roaqj"]

[sub_resource type="SystemFont" id="SystemFont_7rnaj"]
font_names = PackedStringArray("Monospace")
subpixel_positioning = 0

[node name="Pit" type="Node2D"]
script = ExtResource("1_facbr")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 644.0
offset_bottom = 404.0
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="TyrePurple" type="Sprite2D" parent="."]
position = Vector2(123, 127)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_5alox")

[node name="TyreRed" type="Sprite2D" parent="."]
position = Vector2(267, 126)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_r5dis")

[node name="TyreYellow" type="Sprite2D" parent="."]
position = Vector2(406, 125)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_roaqj")

[node name="TyreBlue" type="Sprite2D" parent="."]
position = Vector2(539, 123)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_ysf8g")

[node name="Title" type="Label" parent="."]
offset_left = 365.0
offset_top = 170.0
offset_right = 445.0
offset_bottom = 188.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
theme_override_fonts/font = SubResource("SystemFont_7rnaj")
theme_override_font_sizes/font_size = 17
text = "HARD
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Purple" type="Label" parent="."]
offset_left = 78.0
offset_top = 171.0
offset_right = 169.0
offset_bottom = 189.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
theme_override_fonts/font = SubResource("SystemFont_7rnaj")
theme_override_font_sizes/font_size = 17
text = "SOFT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Red" type="Label" parent="."]
offset_left = 228.0
offset_top = 171.0
offset_right = 308.0
offset_bottom = 189.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
theme_override_fonts/font = SubResource("SystemFont_7rnaj")
theme_override_font_sizes/font_size = 17
text = "MEDIUM
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Yellow" type="Label" parent="."]
offset_left = 502.0
offset_top = 169.0
offset_right = 582.0
offset_bottom = 187.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
theme_override_fonts/font = SubResource("SystemFont_7rnaj")
theme_override_font_sizes/font_size = 17
text = "WET
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Blue" type="Label" parent="."]
offset_left = 246.0
offset_top = 23.0
offset_right = 422.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
theme_override_fonts/font = SubResource("SystemFont_7rnaj")
theme_override_font_sizes/font_size = 36
text = "PIT STOP
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
